--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -31,9 +31,9 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   dbt_course_pr_01:
-    # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+    +meta:
+      owner: 'kurdinivan@gmail.com'
+      year_created: 2025
 
 seeds:
   schema: seeds
